Include 11ty v2 in compatibility field

--- a/example/package.json
+++ b/example/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "dependencies": {
-    "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy": "^2.0.0-canary.8",
     "eleventy-hast-jsx": "file:.."
   }
 }
