--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/j-f1/eleventy-hast-jsx#readme",
   "11ty": {
-    "compatibility": "^1.0.0"
+    "compatibility": "1 - 2"
   },
   "devDependencies": {
     "@11ty/eleventy": "^1.0.0",
